[tool.poetry]
name = "syn_bokeh_helpers"
version = "0.6.1"
description = ""
authors = ["Simon Haendeler <simon.emanuel.haendeler@univie.ac.at>"]

[tool.poetry.dependencies]
python = "^3.8"
bokeh = "^3.1.1"
selenium = "^4.9.1"
Jinja2 = "^3.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
